--- a/.github/workflows/docker-publish-full.yml
+++ b/.github/workflows/docker-publish-full.yml
@@ -79,7 +79,8 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@master
         with:
-          context: ./Dockerfile.full
+          context: .
+          file: ./Dockerfile.full
           platforms: linux/amd64 #,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: full
