--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -13,9 +13,8 @@ ENV PATH="/root/.local/bin:$PATH"
 COPY entrypoint.sh ./
 RUN chmod +x entrypoint.sh
 
-RUN npm install @playwright/test && npx playwright install --with-deps
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN npm install @playwright/test && npx playwright install --with-deps && \
+    apt-get update && apt-get install -y --no-install-recommends \
     wget git net-tools iputils-ping iproute2 dnsutils unzip zip \
     ca-certificates lsb-release gnupg lsof telnet && \
     rm -rf /var/lib/apt/lists/* && \
