--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -13,8 +13,7 @@ ENV PATH="/root/.local/bin:$PATH"
 COPY entrypoint.sh ./
 RUN chmod +x entrypoint.sh
 
-RUN npm install @playwright/test && npx playwright install chromium --with-deps && \
-    apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     wget git net-tools iputils-ping iproute2 dnsutils unzip zip \
     ca-certificates telnet && \
     rm -rf /var/lib/apt/lists/* && \
