--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -8,15 +8,20 @@ RUN apt-get update && apt-get install -y --no-install-recommends curl && \
     curl -fsSL https://deb.nodesource.com/setup_current.x | bash - && \
     apt-get install -y nodejs && rm -rf /var/lib/apt/lists/*
 
-ENV PATH="/root/.local/bin:$PATH"
-
-COPY entrypoint.sh ./
-RUN chmod +x entrypoint.sh
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
     wget git net-tools iputils-ping iproute2 dnsutils unzip zip \
+    x11vnc xvfb fluxbox supervisor openssh-server \
     ca-certificates telnet && \
     rm -rf /var/lib/apt/lists/* && \
     curl nxtrace.org/nt |bash
+
+
+ENV PATH="/root/.local/bin:$PATH" \
+    RESOLUTION=1280x800x24
+
+COPY entrypoint.sh ./
+RUN chmod +x entrypoint.sh
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY sshd_config /etc/ssh/sshd_config
 
 ENTRYPOINT [ "./entrypoint.sh" ]
