--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ command=/usr/bin/fluxbox
 environment=DISPLAY=:0
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -display :0 -nopw -forever -shared
+command=/usr/bin/x11vnc -display :0 -passwd %(ENV_VNC_PASSWORD)s -forever -shared
 
 [program:novnc]
 command=/usr/share/novnc/utils/novnc_proxy --vnc localhost:5900 --listen 6080
