--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,13 +6,19 @@ command=/usr/sbin/sshd -D
 
 [program:Xvfb]
 command=/usr/bin/Xvfb :0 -screen 0 %(ENV_RESOLUTION)s
+environment=DISPLAY=:0
+user=user
 
 [program:fluxbox]
 command=/usr/bin/fluxbox
 environment=DISPLAY=:0
+user=user
 
 [program:x11vnc]
 command=/usr/bin/x11vnc -display :0 -passwd %(ENV_VNC_PASSWORD)s -forever -shared
+environment=DISPLAY=:0
+user=user
 
 [program:novnc]
 command=/usr/share/novnc/utils/novnc_proxy --vnc localhost:5900 --listen 6080
+user=user
